...
                    android:layout_height="wrap_content"
                    android:text="@{album.name}"
                    android:contentDescription="@{album.name}"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    tools:text="Album Tittle"
                    android:id="@+id/albumTittle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{`Genre | ` + album.genre}"
...
