<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ArtistListFragment"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@color/white"
    android:textColor="@color/black">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/artistsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/artist_list_item"/>

</FrameLayout>