...
                    android:layout_height="wrap_content"
                    android:text="@{artist.name}"
                    android:contentDescription="@{artist.name}"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    tools:text="Artist Name"
                    android:id="@+id/artistTittle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{`Birthdate | ` + artist.birthDate}"
...
