...
                    android:layout_height="wrap_content"
                    android:text="@{collector.name}"
                    android:contentDescription="@{collector.name}"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    tools:text="Collector Tittle"
                    android:id="@+id/collectorTittle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{`Telephone | ` + collector.telephone}"
...
